adds fading to about page on p elements

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,9 +28,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" />
-    <title>Full Stack Warrior</title>
+    <title>Daria N</title>
   </head>
-  <body>
+  <body onload="document.body.style.opacity='1'">
     <noscript></noscript>
     <div id="root"></div>
     <!--
